msfwk-testnosql/ms-paymentorder-package/ms-paymentorder-package-docker/src/docker/k8/on-premise/samples/external/paymentorder-api-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: paymentorder-poapisvcnp
  labels:
    app.kubernetes.io/name: paymentorder-poapisvcnp
spec:
  type: NodePort
  ports:
    - name: http
      port: 8080
      protocol: TCP
      nodePort: 30020 
  selector:
    app: paymentorder-api
