msfwk-testnosql/ms-paymentorder-package/ms-paymentorder-package-docker/src/docker/k8/on-premise/samples/external/paymentorder-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paymentorder-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: paymentorderapi.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: paymentorder-poapisvcnp
            port:
              number: 8080
